--- a/views/posting.ejs
+++ b/views/posting.ejs
@@ -109,8 +109,8 @@
                 </div>
                 <div class="col-md-4">
                     <h5>Contact</h5>
-                    <p>Email: support@internshipposts.com</p>
-                    <p>Phone: +1 (555) 123-4567</p>
+                    <p>Email:  mounika@gmail.com</p>
+                    <p>Phone: +91892*****22</p>
                 </div>
                 <div class="col-md-4">
                     <h5>Follow Us</h5>
